--- a/app/assets/pages/profile/profile.html
+++ b/app/assets/pages/profile/profile.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand breadcrumb" > Perfil </a>
+                <a class="navbar-brand breadcrumb" > PERFIL </a>
 
             </div>
         </div>
