--- a/app/assets/pages/table/table.html
+++ b/app/assets/pages/table/table.html
@@ -2,8 +2,8 @@
     <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
   
         <div class="logo">
-            <a href="#" class="simple-text">
-                LOGBOOK
+            <a href="#" class="simple-text" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">
+                Logbook
             </a>
         </div>
         <div class="sidebar-wrapper">
@@ -27,14 +27,14 @@
     <div class="main-panel" >
         <nav class="navbar navbar-transparent navbar-absolute">
             <div class="container-fluid">
-                <div class="navbar-header">
+                <div class="navbar-header" >
                     <button type="button" class="navbar-toggle" data-toggle="collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand breadcrumb"> Bitácora </a>
+                    <a class="navbar-brand breadcrumb" > BITÁCORA </a>
                 </div>
                 <button class="btn btn-info pull-right" ng-click="nuevaEntrada()"><i class="material-icons">add</i>
                 </button>
@@ -47,8 +47,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header" data-background-color="green">
-                                <h4 class="title">Bitácora</h4>
-                                <p class="category">Informe de los procedimientos</p>
+                                <h4 class="title">Informe de los procedimientos</h4>
                             </div>
                             <div class="card-content table-responsive">
                                 <table class="table">
