--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span class="navbar-toggler-bar"></span>
                     <span class="navbar-toggler-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">LOGBOOK</a>
+                <a class="navbar-brand" href="#" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">Logbook</a>
             </div>
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#contact" target="">Contáctenos</a>                    
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="entrarNav" href="/app" target="">Entrar</a>                    
+                        <a class="nav-link" id="entrarNav" href="/app" target="" style="color: #185567">Entrar</a>                    
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/logbookdigital" target="_blank">
@@ -71,14 +71,14 @@
         </div>
     </nav>
 
-    <div class="page-header" data-parallax="false" style="background-image: url(assets2/img/background-img.jpg);">
+    <div class="page-header" data-parallax="false" style="background-image: url(assets2/img/backgroundBlack.jpg)">
         <div class="filter"></div>
         <div class="container">
             <div class="motto text-center">
-                <img src="assets2/icons/logbook_white.png" class="img-fluid" alt="Responsive image">
+                <img src="assets2/icons/LogoNuevo_white.png" class="img-fluid" alt="Responsive image">
                 <h3 class="no-margin">La Bitácora médica fácil y efectiva.</h3>
                 <br>
-                <a href="/app" class="btn btn-lg btn-info btn-round">COMENCEMOS!</a>
+                <a href="/app" class="btn btn-lg btn-info btn-round" style="background-color: #6aefff; border-color: #6aefff; color: #185567">COMENCEMOS!</a>
                 
             </div>
         </div>
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-md-4 supercard">
                     <div class="card card-profile card-plain">
-                        <div class="card-avatar">
-                            <a href="#"><img src="assets2/icons/cloud-computing.svg" alt="..."></a>
+                        <div class="card-avatar" style="color: #185567">
+                            <img src="assets2/icons/cloud-computing.svg" alt="..." >
                         </div>
                         <div class="card-block">
                             <a href="#">
