--- a/public/app/assets/pages/entry/entry.html
+++ b/public/app/assets/pages/entry/entry.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">LB - Nueva Entrada</a>
+                    <a class="navbar-brand" >NUEVA ENTRADA</a>
                     <ol class="breadcrumb">
                         <li ng-class="stepClasses[0]"><a ng-click="changeToStep(1)">ID</a></li>
                         <li ng-class="stepClasses[1]"><a ng-click="changeToStep(2)">DX</a></li>
@@ -129,7 +129,7 @@
                                 <p>La Cirugía Fue</p>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',1)">
-                                <label class="custom-control custom-radio" >                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio1" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
                                         <img src="./assets/icons/elective.svg" class="rounded mx-auto" alt="Ele">
@@ -138,7 +138,7 @@
                                 </label>          
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',2)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio2" name="radio" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
                                         <img src="./assets/icons/urgent.svg" class="rounded mx-auto" alt="Urg">
@@ -147,7 +147,7 @@
                                 </label>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',3)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio3" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
                                         <img src="./assets/icons/emergente.svg" class="rounded mx-auto" alt="Emerg">
@@ -161,7 +161,7 @@
                                 <p>Tu Rol Fue</p>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('rol',1)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio4" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
                                         <img src="./assets/icons/scalpel.svg" class="rounded mx-auto" alt="Ele">
@@ -171,7 +171,7 @@
                                 </label>      
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('rol',2)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio5" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
                                         <img src="./assets/icons/scissors.svg" class="rounded align-middle mx-auto" alt="Urg">
@@ -181,7 +181,7 @@
                                 </label>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('rol',3)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio6" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
                                         <img src="./assets/icons/band-aid.svg" class="rounded mx-auto" alt="Emerg">
@@ -600,7 +600,7 @@
                                 <p>Mi desempeño en esta cirugía fue:</p>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('feeling',1)">
-                                <label class="custom-control custom-radio" >                
+                                <label class="custom-control custom-radio myLabel" >                
                                     <input id="radio7" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
                                         <img src="./assets/icons/muyfeliz.svg" class="rounded mx-auto" alt="feliz">
@@ -608,7 +608,7 @@
                                 </label>          
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('feeling',3)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio8" name="radio" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
                                         <img src="./assets/icons/neutral.svg" class="rounded mx-auto" alt="neutral">
@@ -616,7 +616,7 @@
                                 </label>
                             </div>
                             <div class="card-content col-xs-4" ng-click="setConditional('feeling',5)">
-                                <label class="custom-control custom-radio">                
+                                <label class="custom-control custom-radio myLabel">                
                                     <input id="radio9" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
                                         <img src="./assets/icons/muytriste.svg" class="rounded mx-auto" alt="triste">
