--- a/public/app/assets/pages/welcome/welcome.html
+++ b/public/app/assets/pages/welcome/welcome.html
@@ -103,12 +103,12 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="col-md-6" style="padding: 20px" ng-repeat="avatarInd in avatarNumbers">
-							<img class="rounded-circle" ng-src="{{'./assets/img/avatars/052-man-'+avatarInd+'.svg'}}" ng-click="selectAvatar('man', avatarInd)"/>
+							<img class="rounded-circle" ng-src="{{'./assets/img/avatars/052-man-'+avatarInd+'.svg'}}" ng-click="selectAvatar('man', avatarInd)" data-dismiss="modal"/>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="col-md-6" style="padding: 20px" ng-repeat="avatarInd in avatarNumbers">
-							<img class="rounded-circle" ng-src="{{'./assets/img/avatars/052-woman-'+avatarInd+'.svg'}}" ng-click="selectAvatar('woman', avatarInd)"/>
+							<img class="rounded-circle" ng-src="{{'./assets/img/avatars/052-woman-'+avatarInd+'.svg'}}" ng-click="selectAvatar('woman', avatarInd)" data-dismiss="modal"/>
 						</div>
 					</div>
 				</div>
