--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -4,8 +4,8 @@
         <div class="sidebar" data-color="blue" data-image="../assets/img/sidebar-1.jpg">
       
             <div class="logo">
-                <a href="#" class="simple-text">
-                    LOGBOOK
+                <a href="#" class="simple-text" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">
+                    Logbook
                 </a>
             </div>
             <div class="sidebar-wrapper">
