--- a/app/assets/pages/error/error.html
+++ b/app/assets/pages/error/error.html
@@ -1,7 +1,7 @@
 <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
     <div class="logo">
-        <a href="dashboard.html" class="simple-text">
-            LOGBOOK
+        <a href="#" class="simple-text" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">
+            Logbook
         </a>
     </div>
     <div class="sidebar-wrapper">
