--- a/app/assets/pages/detail/detail.html
+++ b/app/assets/pages/detail/detail.html
@@ -187,7 +187,7 @@
                         <div class="row">
                             <button type="submit" class="btn btn-info pull-right" ng-click="startEdit()" ng-show="!modeEdit && canEdit"><i class="material-icons">mode_edit</i></button>
                             <button type="submit" class="btn btn-info pull-right" ng-click="saveEdit()" ng-show="modeEdit"><i class="material-icons">save</i></button>
-                            <button type="submit" class="btn btn-info pull-right"><i class="material-icons">delete</i></button>
+                            <button type="submit" class="btn btn-info pull-right" ng-click="startDelete()"><i class="material-icons">delete</i></button>
                         </div>
                     </div> 
             
