--- a/app/assets/pages/table/table.html
+++ b/app/assets/pages/table/table.html
@@ -58,7 +58,7 @@
                                         <th ng-click="setOrder('complicaciones')">Complicaiones</th>
                                     </thead>
                                     <tbody>
-                                        <tr ng-repeat="(key, entrada) in entradas | filter: filtroEntradas | orderBy: orderFcn:true | limitTo: 50" ng-if="entradas.length>0" >
+                                        <tr ng-repeat="(key, entrada) in entradas | filter: filtroEntradas | orderBy: orderFcn:true | limitTo: PAGE_LIMIT" ng-if="entradas.length>0" >
                                             <td ng-click="verEntrada(entrada.$id)" style="cursor: pointer;">{{adminserv.getNameById('cirugia',entrada.cirugia[0].id, true)}}</td>
                                             <td>{{entrada.identificacion}}</td>
                                             <td>{{adminserv.interpretarFechaShort(entrada.fecha)}}</td>
@@ -71,14 +71,11 @@
                                         
                                     </tbody>
                                 </table>
+                                <ul class="pagination">
+                                    <li class=" active page-item"><a class="page-link" ng-click="cargarMas()">Cargar más</a></li>
+                                </ul>
                             </div>
-                            <ul class="pagination">
-                                <li class=" active page-item"><a class="page-link" href="#">Previous</a></li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                              </ul>
+                            
                         </div>
                     </div>
                 </div>
