--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="card-content">
                                     <p class="category">Objetivos completados</p>
-                                    <h3 class="title">0%</h3>                             
+                                    <h3 class="title">{{dashData.general.byObjectives.porcentaje}}%</h3>                             
                                 </div>
                                 <div class="card-footer myDashCardFooter">
                                     <div class="stats">
@@ -177,6 +177,24 @@
                                 <div class="card-header card-chart" data-background-color="green">
                                     <div class="myGraph">
                                         <canvas id="line" class="chart chart-line" chart-data="dashData.general.byDateMonths[graphYear].data" chart-labels="options2.labels.year" chart-options="options2.optionsLine" chart-colors="colours" chart-series="[graphYear]">
+                                        </canvas>
+                                    </div>  
+                                </div>
+                                <div class="card-footer">
+                                    <div class="stats">
+                                        <a ng-click="changeYear('prev')">Anterior</a>
+                                    </div>
+                                    <div class="stats pull-right">
+                                        <a ng-click="changeYear('next')" >Siguiente</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-header card-chart" data-background-color="green">
+                                    <div class="myGraph">
+                                        <canvas id="line" class="chart chart-line" chart-data="dashData.general.byDateDays[graphYear][graphMonth]" chart-labels="byMonthLabels" chart-options="options2.optionsLine" chart-colors="colours" chart-series="[options2.labels.year[graphMonth]]">
                                         </canvas>
                                     </div>  
                                 </div>
