--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -200,10 +200,10 @@
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats">
-                                        <a ng-click="changeYear('prev')">Anterior</a>
+                                        <a ng-click="changeMonth('prev')">Anterior</a>
                                     </div>
                                     <div class="stats pull-right">
-                                        <a ng-click="changeYear('next')" >Siguiente</a>
+                                        <a ng-click="changeMonth('next')" >Siguiente</a>
                                     </div>
                                 </div>
                             </div>
