--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -41,10 +41,10 @@
                             <a class="navbar-brand">DASHBOARD</a>
                             <ol class="breadcrumb">
                                 <li ng-class="stepClasses[0]"><a ng-click="changeToStep(1)">General</a></li>
-                                <li ng-class="stepClasses[1]"><a ng-click="changeToStep(2)">R1</a></li>
+                                <!-- <li ng-class="stepClasses[1]"><a ng-click="changeToStep(2)">R1</a></li>
                                 <li ng-class="stepClasses[2]" ng-show="user.anores>=2"><a ng-click="changeToStep(3)">R2</a></li>
                                 <li ng-class="stepClasses[3]" ng-show="user.anores>=3"><a ng-click="changeToStep(4)">R3</a></li>
-                                <li ng-class="stepClasses[4]" ng-show="user.anores>=4"><a ng-click="changeToStep(5)">R4</a></li>
+                                <li ng-class="stepClasses[4]" ng-show="user.anores>=4"><a ng-click="changeToStep(5)">R4</a></li> -->
                             </ol>
                         </div>
                     </div>
