--- a/app/assets/pages/welcome/welcome.html
+++ b/app/assets/pages/welcome/welcome.html
@@ -12,7 +12,11 @@
 									<img src="assets/icons/logbook_white.png">
 								</div>
 							</div>
-							<p class="text-divider">Bienvenido a Logbook. Antes de comenzar necesitamos unos cuantos datos más acerca de ti:</p>
+							<div style="margin-bottom: 30px;">
+								<h4 class="text-divider">Bienvenido a Logbook, te ayudamos al mejoramiento continuo de tu vida profesional...queremos asegurarnos de que cumplas tus objetivos. <br/>
+								Antes de comenzar necesitamos unos cuantos datos más acerca de ti:</h4>
+							</div>
+							
 							<div class="content" style="width: 90%; margin: auto">
 								<p>{{adminserv.getNameById('universidad',universidad, true)}}</p>
 								<form>
