--- a/index.html
+++ b/index.html
@@ -191,11 +191,8 @@
                         Andrés Sierra Sierra
                         <br />
                         <small class="text-muted">
-                            Desarrollador
+                            CEO/CTO
                         </small>
-                        <p>
-                            la descripción de Andrés
-                        </p>
                     </h5>
                 </div>
             </div>
@@ -206,11 +203,8 @@
                         Camila Peñaloza Barrera
                         <br />
                         <small class="text-muted">
-                            Comunicaciones
+                            CDO
                         </small>
-                        <p>
-                            la descripción de Camila
-                        </p>
                     </h5>
                 </div>
             </div>
@@ -221,11 +215,8 @@
                         Sebastián Sierra Sierra
                         <br />
                         <small class="text-muted">
-                            Médico
+                            COO
                         </small>
-                        <p>
-                            la descripción de sebastian
-                        </p>
                     </h5>
                 </div>
             </div>
