--- a/public/app/assets/pages/detail/detail.html
+++ b/public/app/assets/pages/detail/detail.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
     <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
         <div class="logo">
-            <a href="dashboard.html" class="simple-text">
-                LOGBOOK
+            <a href="#" class="simple-text" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">
+                Logbook
             </a>
         </div>
         <div class="sidebar-wrapper">
@@ -187,7 +187,7 @@
                         <div class="row">
                             <button type="submit" class="btn btn-info pull-right" ng-click="startEdit()" ng-show="!modeEdit && canEdit"><i class="material-icons">mode_edit</i></button>
                             <button type="submit" class="btn btn-info pull-right" ng-click="saveEdit()" ng-show="modeEdit"><i class="material-icons">save</i></button>
-                            <button type="submit" class="btn btn-info pull-right"><i class="material-icons">delete</i></button>
+                            <button type="submit" class="btn btn-info pull-right" ng-click="startDelete()"><i class="material-icons">delete</i></button>
                         </div>
                     </div> 
             
