--- a/public/app/assets/pages/entry/entry.html
+++ b/public/app/assets/pages/entry/entry.html
@@ -2,8 +2,8 @@
     <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
   
         <div class="logo">
-            <a href="#" class="simple-text">
-                LOGBOOK
+            <a href="#" class="simple-text" style="font-family: 'fox-cat'; text-transform: capitalize; font-size: 26px;">
+                Logbook
             </a>
         </div>
         <div class="sidebar-wrapper">
@@ -86,8 +86,13 @@
                                 <div class="row">
                                     <div class="form-control-hover card-footer2">
                                         <label class="control-label">Fecha</label>
+                                        <ul class="pagination">
+                                            <li ng-class="datePills[0]" class="page-item"><a class="page-link" ng-click="preDate('antier')">Antier</a></li>
+                                            <li ng-class="datePills[1]" class=" page-item"><a class="page-link" ng-click="preDate('ayer')">Ayer</a></li>
+                                            <li ng-class="datePills[2]" class=" page-item"><a class="page-link" ng-click="preDate('hoy')">Hoy</a></li>
+                                        </ul>
                                         <div class="form-group card-footer2">
-                                            <input type="date" class="form-control" ng-model="entrada.fecha"/>
+                                            <input type="date" class="form-control" ng-model="entrada.fecha" ng-change="changeDate()"/>
                                         </div> 
                                     </div>
                                     <div class="form-control-hover card-footer2">
